# mah_bob

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: supervisor.sqlite3  supervisor.sqlite3-shm  supervisor.sqlite3-wal
deploy/: ai-supervisor.service
src/ai_supervisor/: __init__.py  __main__.py  aiomax_bot.py  analysis.py  bot_ui.py  config.py  conflict_heuristic.py  llm_base.py  llm_factory.py  llm_gigachat.py  llm_yandex.py  main.py  notifier.py  storage.py  supervisor.py
src/ai_supervisor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_supervisor/adapters/: __init__.py  base.py  telegram_stub.py
tests/: test_analysis.py  test_notifier.py
