[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-supervisor"
version = "0.1.0"
description = "AI-бот мониторинга рабочих чатов MAX с анализом через YandexGPT / GigaChat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiomax>=2.11,<3",
  "httpx[socks]>=0.27,<1",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
gigachat = ["gigachat>=0.1.20"]
dev = ["pytest>=8,<10"]

[project.scripts]
ai-supervisor = "ai_supervisor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
